fp4: accessibility - fixed secondary orange color contrast issue

--- a/final-project/styles/variables.css
+++ b/final-project/styles/variables.css
@@ -1,6 +1,6 @@
 :root {
   --color-primary: #eee;
-  --color-secondary: #f05a22;
+  --color-secondary: #d14715;
   --color-tertiary: #ff395d;
   --color-accent-red: #ff99a9;
   --color-accent-green: #00ed95;
